Fix regressions on stackoverflow

--- a/src/css/inDoors.css
+++ b/src/css/inDoors.css
@@ -3,6 +3,7 @@
 */
 .glassdoor-label-wrapper {
 	position: relative;
+  z-index: 26;
 }
 
 .glassdoor-label {
